# learnCMake

./: .gitignore  CMakeLists.txt  CTConfig.h.in  NOTE.md  README.md  configure.bat  main.cpp
include/users/: fun.h
install/include/: CTConfig.h
src/: CMakeLists.txt  fun.cpp
